# lab06

./: CMakeLists.txt  CPack.cmake  README.md  example1  example2  hello_world.cpp  installer.iss
.github/workflows/: action.yaml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
